k8s/base/administration-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: administration-service
  namespace: nephro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: administration-service
  template:
    metadata:
      labels:
        app: administration-service
    spec:
      containers:
        - name: administration-service
          image: nephropaidi-administration-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: administration-service
  namespace: nephro
spec:
  selector:
    app: administration-service
  ports:
    - name: http
      port: 8087
      targetPort: 8087
