k8s/base/clinical-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinical-service
  namespace: nephro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinical-service
  template:
    metadata:
      labels:
        app: clinical-service
    spec:
      containers:
        - name: clinical-service
          image: nephropaidi-clinical-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: clinical-service
  namespace: nephro
spec:
  selector:
    app: clinical-service
  ports:
    - name: http
      port: 8084
      targetPort: 8084
