k8s/base/communication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: communication-service
  namespace: nephro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: communication-service
  template:
    metadata:
      labels:
        app: communication-service
    spec:
      containers:
        - name: communication-service
          image: nephropaidi-communication-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: communication-service
  namespace: nephro
spec:
  selector:
    app: communication-service
  ports:
    - name: http
      port: 8085
      targetPort: 8085
