k8s/base/config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: nephro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: nephropaidi-config-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: nephro
spec:
  selector:
    app: config-server
  ports:
    - name: http
      port: 8888
      targetPort: 8888
