k8s/base/direct-links.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-direct
  namespace: nephro
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      nodePort: 30083
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-direct
  namespace: nephro
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30081
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-direct
  namespace: nephro
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30030
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-direct
  namespace: nephro
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      nodePort: 30090
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-direct
  namespace: nephro
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
