k8s/base/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  namespace: nephro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: nephropaidi-eureka:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: nephro
spec:
  selector:
    app: eureka
  ports:
    - name: http
      port: 8761
      targetPort: 8761
