k8s/base/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: nephro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: nephropaidi-user-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: nephro
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8090
      targetPort: 8090
